--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <li><a href="./about/cosmos">Относительная ссылка на страницу в каталоге about</a></li> 
     <li><a href="../star">Относительная ссылка на страницу в каталоге уровнем выше текущего</a></li> 
     <li><a href="../../lofa">Относительная ссылка на страницу в каталоге двумя уровнями выше</a></li> 
-    <li><p>Это <a href="https://ru.wikipedia.org/wiki/Мода">Мода это..(контекстная ссылка)</a> в тексте абзаца</p></li>
+    <li><p>Мода <a href="https://ru.wikipedia.org/wiki/Мода">это..(контекстная ссылка</a> в тексте абзаца)</p></li>
     <li><a href="https://www.wildberries.ru/catalog/222220418/detail.aspx#fragment">Сумка Hermes с вб(ссылка на фрагмент страницы стороннего сайта)</a></li>
     <li>
         <img src="imageforveb.JPEG" usemap="#map" alt="Bag and Shoes" width="300" height="200">
